--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
     <script src="assets/js/jQuery-min.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap-min.js"></script>
-    <!-- <script src="assets/js/qrCode.js"></script> -->
-    <script src="assets/js/qrCodeStyling.js"></script>
+    <script src="assets/js/qrCode.js"></script>
+    <!-- <script src="assets/js/qrCodeStyling.js"></script> -->
     <script src="assets/js/moment-min.js"></script>
     <script src="assets/js/PLOG/common-min.js"></script>
     <script src="assets/js/PLOG/TIMELOG/timelog-min.js"></script>
