transfer link added for vs code extension

--- a/index.html
+++ b/index.html
@@ -371,6 +371,14 @@
                         <div id="calculator" data-toggle="tooltip" data-placement="bottom" title="Coming Soon"></div>
                       </div>
                     </div>
+
+                    <!-- --- -->
+                    <!-- devChangelog -->
+                    <div class="col-12 col-md-6 col-lg-4" style="min-width: 330px">
+                      <div class="p-2 w-100">
+                        <div id="devChangelog" data-toggle="tooltip" data-placement="bottom" title="Developer Changelog VS Code Extension"></div>
+                      </div>
+                    </div>
                   </div>
                 </fieldset>
               </div>
@@ -476,6 +484,7 @@
     <script src="assets/js/PLOG/GEARUP/time-traker-min.js"></script>
     <script src="assets/js/PLOG/GEARUP/qr-code-gene-min.js"></script>
     <script src="assets/js/PLOG/GEARUP/file-creator-min.js"></script>
+    <script src="assets/js/PLOG/GEARUP/transfer-links-min.js"></script>
     <script src="assets/js/main-min.js"></script>
     <!-- Console Signature -->
     <script src="assets/js/signatureOnLoad.js"></script>
